--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,11 +12,11 @@ jobs:
 
     steps:
       - name: "Setup Docker image cache"
-        uses: "ZentriaMC/gh-cache-docker-images@v1.0.0"
+        uses: "ZentriaMC/gh-cache-docker-images@v1.0.1"
         with:
           cache-suffix: "rhel-${{ env.RHEL_VERSION }}"
 
-      - name: "Fetch Go tools"
+      - name: "Run container"
         run: |
           docker run --rm -i --name ubi registry.access.redhat.com/ubi9:"${{ env.RHEL_VERSION }}" \
             cat /etc/os-release
